apps/haenu/vitess-docs-kr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vitess-docs-kr
  namespace: haenu
  labels:
    app: vitess-docs-kr
spec:
  type: ClusterIP
  ports:
    - port: 3000
  selector:
    app: vitess-docs-kr
